--- a/cadastro/pom.xml
+++ b/cadastro/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>expressly</artifactId>
 			<version>5.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
